[tool.poetry]
name = "nice_as"
version = "0.1.0"
description = ""
authors = ["Ties de Kock <ties@tiesdekock.nl>"]

[tool.poetry.dependencies]
python = "^3.9"
click = "^8.0.3"
pandas = "^1.3.4"

[tool.poetry.dev-dependencies]
pre-commit = "^2.15.0"
black = "^21.11b1"
ipdb = "^0.13.9"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
